<resources>
    <string name="app_name">RemaindMe</string>
    <string name="title">Here Your Title</string>
    <string name="today">Today</string>
    <string name="done">Done</string>
    <string name="not_done">Not Done</string>
    <string name="later">Later</string>
    <string name="task">Task</string>
    <string name="title_activity_base">BaseActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="DeveloperName">Arun Chakkaravarthy</string>
    <string name="user_image_view">User Image View</string>
    <string name="DeveloperEmailID">mailtoarunchakkaravarthy@gmail.com</string>
    <string name="email">Email</string>
    <string name="mobile">Mobile</string>
    <string name="DeveloperMobileNo">+91 6369917587</string>
    <string name="nav_menu_home">Home</string>
    <string name="nav_menu_add_task">Add Task</string>
    <string name="nav_menu_profile">Profile</string>
    <string name="nav_menu_settings">Settings</string>
    <string name="nav_menu_share">Share</string>
    <string name="nav_menu_rate_us">Rate Us</string>
    <string name="nav_menu_about_us">About Us</string>
    <string name="nav_menu_feedback">Feedback</string>
    <string name="next">Next</string>
    <string name="signin">SignIn</string>
    <string name="signup">Signup</string>
    <string name="password">Password</string>
    <string name="email_or_phone">Email or Phone</string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="mobile_no">Mobile Number</string>
    <string name="username">Username</string>
</resources>
