<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_24"
            android:title="@string/nav_menu_home" />
        <item
            android:id="@+id/nav_add_task"
            android:icon="@drawable/ic_add_circle_24"
            android:title="@string/nav_menu_add_task" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_person_24"
            android:title="@string/nav_menu_profile" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_24"
            android:title="@string/nav_menu_settings" />

        <item
            android:id="@+id/nav_about_us"
            android:icon="@drawable/ic_info_24"
            android:title="@string/nav_menu_about_us" />
        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/ic_feedback_24"
            android:title="@string/nav_menu_feedback" />
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/nav_menu_share" />
        <item
            android:id="@+id/nav_rate_us"
            android:icon="@drawable/ic_star_24"
            android:title="@string/nav_menu_rate_us" />
    </group>
    >

</menu>
