<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/list_cat"
    android:orientation="vertical"
    android:layout_marginTop="23dp">

    <android.support.v7.widget.CardView
        android:id="@+id/list-card"
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:layout_margin="7dp"
        android:padding="4dp"
        app:cardBackgroundColor="#ffffff"
        app:cardCornerRadius="10dp"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/title"
            android:text="@string/title"
            android:padding="3dp"
            android:layout_margin="5dp"
            android:textStyle="bold"
            />
        <ImageButton
            android:id="@+id/varity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_schedule_black_24dp"
            android:background="#ffffff"
            android:layout_marginTop="38dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="5dp"/>

        <TextView
            android:id="@+id/type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/today"
            android:padding="3dp"
            android:layout_toRightOf="@+id/varity"
            android:layout_marginTop="38dp"
            android:layout_gravity="bottom"/>

            <TextView
                android:id="@+id/done"
                android:layout_height="20dp"
                android:layout_width="105dp"
                android:text="@string/done"
                android:layout_marginTop="30dp"
                android:layout_alignTop="@+id/type"
                android:layout_gravity=""/>
            <TextView
                android:id="@+id/not_done"
                android:layout_height="20dp"
                android:layout_width="105dp"
                android:text="@string/not_done"
                android:layout_toRightOf="@+id/done"
                android:layout_marginTop="30dp"
                android:layout_alignTop="@+id/type"
                android:textAlignment="center"/>
            <TextView
                android:id="@+id/later"
                android:layout_toRightOf="@+id/not_done"
                android:layout_height="20dp"
                android:layout_width="105dp"
                android:text="@string/later"
                android:layout_marginTop="30dp"
                android:layout_alignTop="@+id/type"
                android:textAlignment="textEnd"/>

        </RelativeLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>
