<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/SkyBlue"
    tools:context=".Fragments.SignUpFragment">

    <ImageView
        android:id="@+id/iv_appLogo_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/common50dp"
        android:layout_marginBottom="@dimen/common10dp"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tv_text_signin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_appLogo_signup"
        android:text="@string/signup"
        android:textAlignment="center"
        android:textSize="@dimen/common20dp"
        android:textColor="@color/White"
        android:textAllCaps="true"
        android:letterSpacing="0.5"
        android:textStyle="bold|normal"
        android:layout_marginTop="@dimen/common10dp"
        android:layout_marginBottom="@dimen/common10dp"
        tools:targetApi="lollipop"
        tools:ignore="SpUsage" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="@dimen/common20dp"
        android:layout_marginTop="@dimen/common20dp"
        android:layout_below="@+id/tv_text_signin"
        android:layout_marginBottom="-20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/common16dp"
            android:scrollbars="vertical"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="@dimen/common16dp"
                    android:textColor="@color/BgColor"
                    android:hint="@string/username"
                    android:singleLine="true"
                    android:textSize="@dimen/text20sp"
                    android:id="@+id/username_signup"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="@dimen/common16dp"
                    android:textColor="@color/BgColor"
                    android:hint="@string/email"
                    android:singleLine="true"
                    android:textSize="@dimen/text20sp"
                    android:id="@+id/email_signup"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="@dimen/common16dp"
                    android:textColor="@color/BgColor"
                    android:hint="@string/mobile_no"
                    android:singleLine="true"
                    android:textSize="@dimen/text20sp"
                    android:id="@+id/mobile_signup"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="@dimen/common16dp"
                    android:textColor="@color/BgColor"
                    android:hint="@string/password"
                    android:singleLine="true"
                    android:textSize="@dimen/text20sp"
                    android:id="@+id/password_signup"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="@dimen/common16dp"
                    android:textColor="@color/BgColor"
                    android:hint="@string/confirm_password"
                    android:singleLine="true"
                    android:textSize="@dimen/text20sp"
                    android:id="@+id/confirm_password_signup"/>

            </android.support.design.widget.TextInputLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="135dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/White"
                android:background="@drawable/btn_gradient_style"
                android:text="@string/signup"
                android:textAllCaps="true"
                android:letterSpacing=".15"
                android:textAlignment="center"
                android:layout_margin="@dimen/common16dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Already I have an account"
                android:textAlignment="center"
                android:textSize="@dimen/text20sp"
                android:textColor="@color/grey"
                android:textAllCaps="false"
                android:textStyle="bold|normal"
                tools:targetApi="lollipop"
                android:layout_marginTop="@dimen/common16dp"
                tools:ignore="SpUsage" />

        </LinearLayout>

    </android.support.v7.widget.CardView>
</RelativeLayout>